--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "url": "https://github.com/zana-a/react-counter"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react-scripts": "^4.0.3",
-    "cross-env": "^7.0.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "cross-env PORT=8080 react-scripts start",
