--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
