--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "repository": {
     "url": "https://github.com/zana-a/react-counter"
   },
+  "homepage": "https://zana-a.github.io/react-counter",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -27,11 +28,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "cross-env PORT=8080 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "yarn build && gh-pages -d build"
   },
   "browserslist": {
     "production": [
